Added exercises on numbers

--- a/A_Beginner_2/03.2 Data Types - Numbers.ipynb
+++ b/A_Beginner_2/03.2 Data Types - Numbers.ipynb
@@ -86,6 +86,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself! \n",
+    "\n",
+    "Get the smallest value from this sequence using __`min()`__: \n",
+    "\n",
+    "(92, -52, 40, -79, -71, -33, -36, 20, 0, 13, 69, -18, 65, -7, -16, 88, -70, -90, 4, 68, -51, -63, -14, 77, 23, -9, 73, 41, 57, -21, -4, 47, -77, 53, -72, 32, 27, -11, -19, 76, 15, 16, -46, -64, 38, 9, 19, 39, 25, -43, -85, -57, -76, 85, 48, 12, 35, 1, 63, -80, 86, -83, -2, -96, -75, -44, 90, 5, 28, 58, 93, -74, -26, -60, -28, 67, 66, 3, -68, 82, -17, 34  -92, -1, 10, 24, -78, 7, -5, -66, -42, -23, -93, -56, 22, -40, 50, -49, -47, 33, 8, -3, -48, -99, -91, 11, -35, -30, -67, -84, 80, -15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.2.3 max( )\n",
     "\n",
     "- The method max returns the elements from the list with maximum value.\n",
@@ -122,6 +147,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself! \n",
+    "\n",
+    "Get the largest value from this sequence using __`max()`__: \n",
+    "\n",
+    "(92, -52, 40, -79, -71, -33, -36, 20, 0, 13, 69, -18, 65, -7, -16, 88, -70, -90, 4, 68, -51, -63, -14, 77, 23, -9, 73, 41, 57, -21, -4, 47, -77, 53, -72, 32, 27, -11, -19, 76, 15, 16, -46, -64, 38, 9, 19, 39, 25, -43, -85, -57, -76, 85, 48, 12, 35, 1, 63, -80, 86, -83, -2, -96, -75, -44, 90, 5, 28, 58, 93, -74, -26, -60, -28, 67, 66, 3, -68, 82, -17, 34  -92, -1, 10, 24, -78, 7, -5, -66, -42, -23, -93, -56, 22, -40, 50, -49, -47, 33, 8, -3, -48, -99, -91, 11, -35, -30, -67, -84, 80, -15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.2.4 abs( )\n",
     "\n",
     "- The function `abs()` returns absolute value of `x` - the (positive) distance between x and zero.\n",
@@ -148,6 +198,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself!\n",
+    "\n",
+    "Get the absolute value of __-1.088__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.2.5 sqrt( )\n",
     "\n",
     "- The function __`sqrt()`__ returns the square root of __`x`__ for __`x > 0`__.\n",
@@ -163,7 +236,7 @@
    "outputs": [],
    "source": [
     "import math   # This will import math module\n",
-    "\n",
+    "    \n",
     "print(math.sqrt(100))"
    ]
   },
