Added more exercises in strings

--- a/A_Beginner_2/03.3 Data Types - Strings.ipynb
+++ b/A_Beginner_2/03.3 Data Types - Strings.ipynb
@@ -51,9 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__NOTE:__\n",
-    "\n",
-    "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes:"
+    "__NOTE:__ One advantage of using double quotes is that, you don't have to worry about printing with apostrophes:"
    ]
   },
   {
@@ -65,7 +63,7 @@
    "outputs": [],
    "source": [
     "string_sample1 = \"Tell me why, ain't nothin' but a heartbreak.\"\n",
-    "\n",
+    "    \n",
     "print(string_sample1)"
    ]
   },
@@ -215,6 +213,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself: Escape Characters\n",
+    "\n",
+    "Print the song lyrics on the same format below.\n",
+    "\n",
+    "NOTES: \n",
+    "- Put the song lyrics into a single variable named __`dilemma`__ \n",
+    "- Use a single quote for the string.\n",
+    "- Use the necessary escape characters to achieve that format.\n",
+    "\n",
+    "__`\"No matter what I do`__\n",
+    "\n",
+    "__`all I think about is you`__\n",
+    "\n",
+    "__`even when I'm with my boo`__\n",
+    "\n",
+    "__`boy you know I'm crazy over you`\"__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your codes below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.3.3 Methods \n",
     "\n",
     "Here are a few useful methods for strings:\n",
@@ -287,6 +324,31 @@
    "source": [
     "On the example above, it didn't count the 'O' in Oscar, because it is in case sensitive, Meaning 'O' is different from 'o'.\n",
     "\n",
+    "## Try it tourself!\n",
+    "\n",
+    "Print the number of Os in the string below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "sample_o = \"oOoOoOoOoOoOoOoOoOoOoOoOoOo00oo000OOO0000oooo000ooooo000OOOOoooOOOOooo00OO00OOO0oooooo\"\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `.find()`\n",
     "\n",
     "We use __`.find()`__ to search for a specific character/s in a string.\n",
@@ -541,7 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
+    "## More Exercises\n",
     "\n",
     "(1) Count all the vowels, uppercase and lowercase in this sentence and print the result:"
    ]
@@ -624,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
