Added exercise on assigning values on list

--- a/A_Beginner_2/03.4 Data Types - Lists .ipynb
+++ b/A_Beginner_2/03.4 Data Types - Lists .ipynb
@@ -169,7 +169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -178,7 +178,37 @@
     "x = ['Eric', 'John', 'Dale', 'Rob']\n",
     "x[2] = \"Will\"\n",
     "\n",
-    "print(x[2])"
+    "print(x[2])\n",
+    "print(x[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: Assigning values on a list\n",
+    "\n",
+    "- (1) Change the value `hydrangea` to `sunflower`.\n",
+    "- (2) Print sunflower.\n",
+    "- (3) Print the entire list.\n",
+    "\n",
+    "Make sure to use the proper index. :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "flowers = ['rose', 'tulip', 'daisy', 'hydrangea', 'orchid']\n",
+    "\n",
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
