Added exercises on tuple + Minor revisions

--- a/A_Beginner_2/03.5 Data Types - Tuples.ipynb
+++ b/A_Beginner_2/03.5 Data Types - Tuples.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "A tuple is a sequence of __immutable__ Python objects. By __immutable__, it means that tuples __CANNOT__ be changed once created. They hold an __ordered__ collection of values which can be of any type.\n",
     "\n",
-    "- Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed, as mentioned above unlike lists. Also, tuples use parentheses whereas lists use square brackets.\n",
+    "- Tuples are sequences, just like lists. The difference between tuples and lists is, as mentioned above, tuples cannot be changed unlike lists. Also, tuples use parentheses whereas lists use square brackets.\n",
     "\n",
     "- Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
     "\n",
@@ -70,6 +70,30 @@
    "source": [
     "Like string indices, tuple indices start at 0, and they can be sliced, concatenated, and so on.\n",
     "\n",
+    "## Try it yourself! \n",
+    "\n",
+    "Create a tuple named __`sample_tuple`__ and assign the values: `Pikachu, Jigglypuff, Psyduck,` and `Ratata`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "## 3.5.1 Accessing Values in a Tuple\n",
     "\n",
     "In accessing values in a tuple, it is also similar to other data types such as lists. Use the square brackets for slicing along with the index or indices to obtain value available at that index.\n",
@@ -107,6 +131,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself: Accessing values in a Tuple\n",
+    "\n",
+    "Access and `print` the value 'Pokemon' in the tuple below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "anime = (\"Bleach\", \"Dragon Ball Z\", \"Naruto\", \"Pokemon\", \"Doraemon\")\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.5.2 Methods\n",
     "\n",
     "Since tuples are immutable (cannot be changed), there are fewer methods available.\n",
@@ -122,14 +170,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Run the Code\n",
     "my_tuple = (1, 2, 3, 4, 5)\n",
     "\n",
-    "len(tuple1)"
+    "len(my_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: `len()`\n",
+    "\n",
+    "Display the number of elements in tuple `random_integers`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "random_integers = (89, 41, 22, 12, 67, 96, 53, 36, 17, 19, 44,\\\n",
+    "                   69, 33, 82, 5, 35, 72, 25, 68, 56, 8, 40, 43,\\\n",
+    "                   83, 59, 51, 20, 47, 77, 99, 90, 91, 2, 37, 95,\\\n",
+    "                   78, 87, 100, 30, 27)\n",
+    "\n",
+    "# Write your code below\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -156,7 +231,61 @@
     "# Run the code\n",
     "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
     "\n",
-    "print(my_tuple.count('apple'))"
+    "my_tuple.count('apple')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: `count()`\n",
+    "\n",
+    "Display how many times `23` occured in the tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "random_integers2 = (34, 60, 80, 69, 83, 6, 87, 51, 27,\n",
+    "                     11, 26, 30, 93, 18, 76, 74, 66, 33,\n",
+    "                     55, 14, 23, 10, 61, 63, 73, 72, 52,\n",
+    "                     47, 15, 28, 78, 67, 71, 46, 1, 89, 13,\n",
+    "                     3, 35, 5, 54, 84, 25, 95, 94, 42, 96,\n",
+    "                     49, 31, 59)\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print how many lowercase 'a' are there in the tuple named `letter_a`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "letter_a = ('a','a','d','c','a','o','q','a','d','a','q','d','q','a')\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -181,27 +310,37 @@
     "# Run the code\n",
     "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
     "\n",
-    "print(my_tuple.index('banana'))"
+    "my_tuple.index('banana')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise\n",
+    "## Try it yourself: `index()`\n",
     "\n",
-    "(1) Print how many lowercase 'a' are there in the tuple named `letter_a`."
+    "Display on which index did `88` appeared."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "letter_a = ('a','a','d','c','a','o','q','a','d','a','q','d','q','a')\n"
+    "random_integers3 = (28, 85, 63, 49, 97, 54, 52, 70,\n",
+    "                    15, 71, 53, 100, 34, 32, 7, 44,\n",
+    "                    78, 17, 57, 55, 91, 47, 31, 22,\n",
+    "                    11, 67, 2, 4, 88, 64, 27, 75, 79,\n",
+    "                    87, 99, 26, 39, 20, 3, 45, 93, 19,\n",
+    "                    84, 82, 35, 6, 62, 14, 58, 36)\n",
+    "\n",
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
