Exercises on Dictionary

--- a/A_Beginner_2/03.6 Data Types - Dictionaries.ipynb
+++ b/A_Beginner_2/03.6 Data Types - Dictionaries.ipynb
@@ -33,7 +33,43 @@
     "- __`'key1'`__ points to the value __`1`__, \n",
     "- __`'key2'`__ points to the value __`2`__, and\n",
     "- __`'key3'`__ points to the value __`3`__\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: Creating your own dictionary!\n",
     "\n",
+    "(1) Create a dictionary and name it __`drink`__\n",
+    "\n",
+    "(2) Enter the following key-value pairs: \n",
+    "- __Key:__ `'Juice'`, __Value:__ `'Orange'`\n",
+    "- __Key:__ `'Smoothie'`, __Value:__ `'Chocolate'`\n",
+    "- __Key:__ `'Wine'`, __Value:__ `'Red Wine'`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Facts about Dictionaries:\n",
     "\n",
     "- (a) __Keys__ are __unique__ within a dictionary while __values may not be__. \n",
@@ -119,11 +155,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
     "my_dictionary['Name']"
    ]
@@ -174,6 +210,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself: Accessing values in a dictionary\n",
+    "\n",
+    "In the __`employee_info`__ dictionary, access the address of the employee.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "employee_info = {'Name': 'Taro Noguchi',\n",
+    "               'Designation': 'CEO',\n",
+    "               'Employee Number': 12345678,\n",
+    "               'Address': 'C2 Building, 7th Ave. Corner 28th St., BGC Taguig'}\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.6.2 Adding New Entries\n",
     "\n",
     "Dictionaries are \"mutable\" which means they can be changed after they are created. We can add new key/value pairs to the dictionary. \n",
@@ -196,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's try to add a new key-value pair to our existing dictionary:"
+    "Now, see the example below on how to add a new key-value pair in our existing dictionary:"
    ]
   },
   {
@@ -207,9 +271,14 @@
    },
    "outputs": [],
    "source": [
+    "# Our existing dictionary:\n",
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
-    "my_dictionary['Gender']='Male'"
+    "# We added a new key-value pair:\n",
+    "my_dictionary['Gender']='Male'\n",
+    "\n",
+    "# Let's see our updated dictionary. Run the code\n",
+    "my_dictionary"
    ]
   },
   {
@@ -223,7 +292,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -240,8 +309,45 @@
     "food['Burger'] = 120\n",
     "food['Ham and Cheese sandwich'] = 80\n",
     "\n",
-    "print(\"Pizza costs\", food['Pizza'])\n",
-    "print(\"Ramen costs\", food['Ramen'])"
+    "# Run the code to see our updated dictionary\n",
+    "food"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself! \n",
+    "\n",
+    "(1) Add a new key value pair in the `Pokemon` dictionary.\n",
+    "- Key: `Squirtle`; Value: `Water`\n",
+    "- Key: `Onix`; Value: `Rock`\n",
+    "- Key: `Spearow`; Value: `Flying`\n",
+    "- Key: `Horsey`; Value: `Water`\n",
+    "\n",
+    "(2) Display the updated dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Pokemon = {'Pikachu': 'Electric',\n",
+    "           'Bulbasaur': 'Grass',\n",
+    "           'Togepi': 'Fairy',\n",
+    "           'Charmander': 'Fire'\n",
+    "          }\n",
+    "\n",
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -292,6 +398,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself: Changing dictionary entries\n",
+    "\n",
+    "(1) Change the value of the key __`mobile`__ from __`1234`__ to __`9157222768`__ in the dictionary __`phone_numbers`__. \n",
+    "\n",
+    "(2) Display the new value of the key `mobile`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "phone_numbers = {'work': 9178837261,\n",
+    "                 'home': 4557677,\n",
+    "                 'mobile': 1234,\n",
+    "                 'fax': 4556388\n",
+    "                 }\n",
+    "                 \n",
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.6.4 Deleting Entries\n",
     "\n",
     "Items can be removed from a dictionary with the __`del`__ statement.\n",
@@ -321,7 +459,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -337,6 +475,36 @@
     "del food['Garlic Bread']\n",
     "\n",
     "food"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: Deleting entries\n",
+    "\n",
+    "(1) In the dictionary __`books`__, delete the key __`John Green`__ along with its value.\n",
+    "\n",
+    "(2) Display the updated dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "books = {'Jojo Moyes': 'Me Before You',\n",
+    "        'J.K. Rowling': 'Harry Potter and the Cursed Child',\n",
+    "        'John Green': 'Looking for Alaska',\n",
+    "        'Junot Diaz': 'This is How You Lose Her'}\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -360,9 +528,34 @@
    "source": [
     "# Run the code to see how len() works\n",
     "\n",
-    "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
     "len(my_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: `len()`\n",
+    "\n",
+    "Display the length of the dictionary __`random_numbers`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "random_numbers = {'a': 44, 'b': 42, 'd': 56, 'm': 13, 'c': 23,'e': 17, 'o': 39, 't': 98, 'y': 12, 'x': 67}, \n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -387,6 +580,31 @@
     "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
     "str(my_dictionary) # prints the equivalent string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: `str()`\n",
+    "\n",
+    "Display a printable string representation of dictionary __`random_numbers`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "random_numbers = {'a': 44, 'b': 42, 'd': 56, 'm': 13, 'c': 23,'e': 17, 'o': 39, 't': 98, 'y': 12, 'x': 67}, \n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -479,9 +697,9 @@
     "\n",
     "(3) Add another key: __`Yellow`__, with a value __`Banana`__.\n",
     "\n",
-    "(4) Add the last key: __`Purple`__, with a valie __`Grapes`__.\n",
+    "(4) Add the last key: __`Purple`__, with a value __`Grapes`__.\n",
     "\n",
-    "(5) Print how many fruits are there in the dictionary. Output should be like this: __There are 3 items on the menu.__"
+    "(5) Print how many fruits are there in the dictionary. Output should be like this: __`There are 3 items on the menu.`__"
    ]
   },
   {
@@ -493,6 +711,12 @@
    "outputs": [],
    "source": [
     "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
