changed Image to image

--- a/D_Web_Development_1/04. Debugging and Logging Modules.ipynb
+++ b/D_Web_Development_1/04. Debugging and Logging Modules.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "### Werkzeug Debugger\n",
     "\n",
-    "![Werkzeug Debugger](Images/debugger.png)\n",
+    "![Werkzeug Debugger](images/debugger.png)\n",
     "\n",
     "In our Flask app, Werkzeug (one of Flask's dependencies) shows an error page when something goes wrong. For each line of code in the traceback, you can click it to expand it. There's also a small icon on the right most side of each line that gives you access to the debugger console after entering the PIN. The PIN is given in the console when the Flask server starts.\n",
     "\n",
