Updated changed 'Image' to 'image'

--- a/D_Web_Development_1/01. Flask Framework.ipynb
+++ b/D_Web_Development_1/01. Flask Framework.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "### [Error page (Debugger)](http://127.0.0.1:8000/error)\n",
     "\n",
-    "![Werkzeug Debugger](Images/debugger.png)\n",
+    "![Werkzeug Debugger](images/debugger.png)\n",
     "\n",
     "Our third function does not return a response so it shows the debugger. Whenever you have bugs in your code, it's likely that you'll see this screen.\n",
     "\n",
