Updated while loop + added exercise

--- a/A_Beginner_3/01. Loops and Iteration.ipynb
+++ b/A_Beginner_3/01. Loops and Iteration.ipynb
@@ -26,6 +26,8 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
+    "\n",
     "x = 3\n",
     "while x > 0:\n",
     "    print(\"x > 0:\", x)\n",
@@ -36,7 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you finish coding a while loop, it is good practice to always double-check: Did I make a change to the variables, inside the loop, that will eventually make the loop condition False?"
+    "On the example above, while __`x`__ is greater than __`0`__, the string __`\"x > 0\"`__ and the value of __`x -= 1`__ will be printed. \n",
+    "\n",
+    "__`x -= 1`__, as discussed in begginer notebooks, will subtract the right operand (`1`) from left operand (`3`), and will assign the result to the left operand.\n",
+    "\n",
+    "As you finish coding a while loop, it is good practice to always double-check: Did I make a change to the variables inside the loop that will eventually make the loop condition False?\n",
+    "\n",
+    "Here's another example:"
    ]
   },
   {
@@ -55,6 +63,38 @@
     "while ingredients:\n",
     "    pop = ingredients.pop()\n",
     "    print(pop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: While loop\n",
+    "\n",
+    "Make a simple program which will display the output below:\n",
+    "\n",
+    "__`10`__\n",
+    "\n",
+    "__`9`__\n",
+    "\n",
+    "__`8`__\n",
+    "\n",
+    "__`7`__\n",
+    "\n",
+    "__`6`__\n",
+    "\n",
+    "__`5`__\n",
+    "\n",
+    "__`4`__\n",
+    "\n",
+    "__`3`__\n",
+    "\n",
+    "__`2`__\n",
+    "\n",
+    "__`1`__\n",
+    "\n",
+    "\n",
+    "NOTE: Use while loop.\n"
    ]
   },
   {
