Added exercise and more explanation in for loop and range

--- a/A_Beginner_3/01. Loops and Iteration.ipynb
+++ b/A_Beginner_3/01. Loops and Iteration.ipynb
@@ -124,6 +124,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself: For Loop\n",
+    "\n",
+    "- (1) Create a list and name it __`colors`-__\n",
+    "- (2) Assign the values `red, blue, white` and `yellow`.\n",
+    "- (3) Using `for` loop, write a code that will display the output below:\n",
+    "\n",
+    "\n",
+    "__`red`__\n",
+    "\n",
+    "__`blue`__\n",
+    "\n",
+    "__`white`__\n",
+    "\n",
+    "__`yellow`__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.2.1 [range()](https://docs.python.org/3.5/library/stdtypes.html#range)\n",
     "\n",
     "If you need to iterate over a sequence of numbers, the built-in function `range()` can generate arithmetic progressions:"
@@ -156,7 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -164,10 +184,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Start at 5; stop at 10."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -175,14 +202,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Start at 5; stop at 15; 3 steps in between."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "list(range(7, -7, -2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Start at 7; stop at -7; -2 steps in between."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: `range()`\n",
+    "\n",
+    "Using the __`range()`__ function, display the output below:\n",
+    "\n",
+    "- __`[13,18,23,28,33]`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -198,7 +265,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
