--- a/A_Beginner_3/01. Loops and Iteration.ipynb
+++ b/A_Beginner_3/01. Loops and Iteration.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try it yourself: While loop\n",
+    "## Try it yourself: `while` loop\n",
     "\n",
     "Make a simple program which will display the output below:\n",
     "\n",
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 [For](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements)\n",
+    "## 1.2 [`for`](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements)\n",
     "\n",
     "The `for` statement sequentially iterates over a list, string, set or any iterable."
    ]
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try it yourself: For Loop\n",
+    "## Try it yourself: `for` Loop\n",
     "\n",
     "- (1) Create a list and name it __`colors`-__\n",
     "- (2) Assign the values `red, blue, white` and `yellow`.\n",
@@ -138,6 +138,21 @@
     "__`white`__\n",
     "\n",
     "__`yellow`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -384,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise:\n",
+    "## More Exercises:\n",
     "\n",
     "(1) Print the fruits in vertical order. Use the `For` loop."
    ]
@@ -415,17 +430,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "fruit = 'Banana'\n",
+    "# Write your code below\n",
     "\n",
-    "while fruit == 'Apple':\n",
-    "    print('An apple a day keeps the doctor away.')\n",
-    "    \n",
-    "else:\n",
-    "    print('Sad')"
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
