Minor revision: title

--- a/B_Intermediate_1/03. OOP in Python - Part 1.ipynb
+++ b/B_Intermediate_1/03. OOP in Python - Part 1.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# 3. Basic OOP in Python\n",
+    "# 3. OOP in Python - Part 1\n",
     "\n",
     "> Python has been an object-oriented language since it existed. Because of this, creating and using classes and objects are downright easy.\n",
     "\n",
