--- a/B_Intermediate_1/04. OOP in Python - Part 2.ipynb
+++ b/B_Intermediate_1/04. OOP in Python - Part 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Advanced OOP in Python\n",
+    "# 4. OOP in Python - Part 2\n",
     "\n",
     "This notebook assumes you can already create and use Python classes. In this notebook, we'll take a deeper look at classes.\n",
     "\n",
