Added best practice for bool

--- a/B_Intermediate_3/03. Best Practices.ipynb
+++ b/B_Intermediate_3/03. Best Practices.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "PEPs are Python Enhancement Proposals. There are also other [PEPs](https://www.python.org/dev/peps/) available for reference.\n",
     "\n",
-    "## 3.2 print()\n",
+    "## 3.2 `print()`\n",
     "\n",
     "Use the print function."
    ]
@@ -741,6 +741,46 @@
     "Avoid reinventing the wheel:\n",
     "1. Learn the standard library\n",
     "2. Get familiar with PyPI (the Python Package Index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.18 Usage of `bool`\n",
+    "\n",
+    "Instead of writing an __`if-else`__ statement that will evaluate __`True`__ or __`False`__, use __`bool`__ instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Bulky Code\n",
+    "\n",
+    "def has_started(self):\n",
+    "        if not self.time_started:\n",
+    "            return False\n",
+    "        return True\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Improved Code\n",
+    "\n",
+    "def has_started(self):\n",
+    "        return bool(self.time_started)\n"
    ]
   }
  ],
