Added contents for Best Practices

--- a/B_Intermediate_3/03. Best Practices.ipynb
+++ b/B_Intermediate_3/03. Best Practices.ipynb
@@ -782,6 +782,54 @@
     "def has_started(self):\n",
     "        return bool(self.time_started)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.19 [Naming](https://gist.github.com/sloria/7001839#naming)\n",
+    "\n",
+    "- __Variables, functions, methods, packages, modules__:   `lower_case_with_underscores`\n",
+    "- __Classes and Exceptions__: `CapWords`\n",
+    "- __Protected methods and internal functions__:`_single_leading_underscore(self, ...)`\n",
+    "- __Private methods:__: `__double_leading_underscore(self, ...)`\n",
+    "- __Constants__: `ALL_CAPS_WITH_UNDERSCORES`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.19.1 Prefer ['reverse notation'](http://www.nilunder.com/blog/2013/08/03/pythonic-sensibilities/):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Yes:\n",
+    "elements = ... \n",
+    "elements_active = ... \n",
+    "elements_defunct = ... "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# No:\n",
+    "elements = ...  \n",
+    "active_elements = ... \n",
+    "defunct_elements = ...  "
+   ]
   }
  ],
  "metadata": {
