Modified function name + minor edit

--- a/A_Beginner_1/03. Coding Style.ipynb
+++ b/A_Beginner_1/03. Coding Style.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
     "eggs = 12\n",
     "return eggs\n",
     "        \n",
-    "print spam()"
+    "food()"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "    eggs = 12\n",
     "    return eggs\n",
     "        \n",
-    "print(food())"
+    "food()"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "my_list = [\n",
-    "    'item1',    \n",
+    "    'item1',\n",
     "    'item2',\n",
     "]"
    ]
